[package]
name = "sub_notif"
version = "0.1.0"
authors = ["Evan Chang <evanc577@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
htmlescape = "0.3"
reddit-api = { git = "https://github.com/evanc577/reddit-api.git" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
time = { version = "0.3.40", features = ["parsing"] }
tokio = { version = "1.44", features = ["full"] }
